# oxide-nds

./: .gitignore  LICENSE  Makefile  README.md
docs/file-formats/: oxsm.md
examples/oxsm-tri/: Makefile  README.md
examples/oxsm-tri/nitrofs/: tri.oxsm
examples/oxsm-tri/src/: Main.cpp
include/: ox_common.h  oxnds.h
include/3d/: ox_3d.h  ox_material.h  ox_model.h
src/: ox_common.c
src/3d/: ox_3d.c  ox_material.c  ox_model.c
tools/: README.md
tools/common-includes/: oxtool_log.h  oxtool_stringutils.h
tools/oxsmconv/: CMakeLists.txt  README.md
tools/oxsmconv/src/: Main.cpp  OBJ.h
